<resources>
    <string name="app_name">My Weather</string>
    <string name="select_city">Chọn thành phố</string>
    <string name="city_hint">Nhập tên thành phố</string>
    <string name="view_weather">Xem thời tiết</string>
    <string name="weather_info">Thông tin thời tiết</string>
    <string name="temperature">Nhiệt độ:</string>
    <string name="humidity">Độ ẩm:</string>
    <string name="condition">Tình trạng:</string>
    <string name="back">Quay lại</string>
    <string name="menu_about">Giới thiệu ứng dụng</string>
    <string name="about_title">Về ứng dụng</string>
    <string name="about_message">Ứng dụng Thời Tiết Của Tôi\n\nPhiên bản 1.0\n\nỨng dụng cho phép xem thông tin thời tiết của các thành phố.\n\nPhát triển bởi: Sinh viên PTIT</string>
    <string name="ok">OK</string>

    <!-- City names -->
    <string-array name="cities">
        <item>Hà Nội</item>
        <item>Hồ Chí Minh</item>
        <item>Đà Nẵng</item>
        <item>Hải Phòng</item>
        <item>Cần Thơ</item>
        <item>Nha Trang</item>
        <item>Huế</item>
        <item>Vũng Tàu</item>
    </string-array>
</resources>